# src/routes/control_request.rs
@@ -1,26 +1,26 @@
 use std::sync::Arc;
 
 use axum::extract::State;
+use smelter_api::OkResponse;
 use smelter_core::Pipeline;
 
-use crate::{
-    error::ApiError,
-    state::{ApiState, Response},
-};
+use crate::{error::ApiError, routes::Json, state::ApiState};
 
 #[utoipa::path(
     post,
     path = "/api/start",
     operation_id = "start",
     responses(
-        (status = 200, description = "Smelter instance started.", body = Response),
+        (status = 200, description = "Smelter instance started.", body = OkResponse),
         (status = 500, description = "Internal server error.", body = ApiError),
     ),
     tags = ["control_request"],
 )]
-pub async fn handle_start(State(state): State<Arc<ApiState>>) -> Result<Response, ApiError> {
+pub async fn handle_start(
+    State(state): State<Arc<ApiState>>,
+) -> Result<Json<OkResponse>, ApiError> {
     Pipeline::start(&state.pipeline()?);
-    Ok(Response::Ok {})
+    Ok(Json(OkResponse {}))
 }
 
 #[utoipa::path(
@@ -28,14 +28,16 @@ pub async fn handle_start(State(state): State<Arc<ApiState>>) -> Result<Response
     path = "/api/reset",
     operation_id = "reset",
     responses(
-        (status = 200, description = "Smelter instance reset.", body = Response),
+        (status = 200, description = "Smelter instance reset.", body = OkResponse),
         (status = 500, description = "Internal server error.", body = ApiError),
     ),
     tags = ["control_request"],
 )]
-pub async fn handle_reset(State(state): State<Arc<ApiState>>) -> Result<Response, ApiError> {
+pub async fn handle_reset(
+    State(state): State<Arc<ApiState>>,
+) -> Result<Json<OkResponse>, ApiError> {
     tokio::task::spawn_blocking(move || state.reset())
         .await
         .unwrap()?;
-    Ok(Response::Ok {})
+    Ok(Json(OkResponse {}))
 }
