# src/routes/update_input.rs
@@ -1,27 +1,12 @@
-use std::{sync::Arc, time::Duration};
+use std::sync::Arc;
 
 use axum::extract::{Path, State};
-use schemars::JsonSchema;
-use serde::{Deserialize, Serialize};
-use smelter_api::TypeError;
-use utoipa::ToSchema;
 
-use crate::{
-    error::ApiError,
-    state::{ApiState, Response},
-};
+use crate::{error::ApiError, state::ApiState};
 
-use smelter_api::InputId;
+use smelter_api::{InputId, OkResponse, UpdateInputRequest};
 
 use super::Json;
-
-#[derive(Debug, Serialize, Deserialize, Clone, JsonSchema, ToSchema)]
-#[serde(deny_unknown_fields)]
-pub struct UpdateInputRequest {
-    pub pause: Option<bool>,
-    /// Seek to a specific position in milliseconds. Only supported for MP4 inputs.
-    pub seek_ms: Option<f64>,
-}
 
 #[utoipa::path(
     post,
@@ -29,7 +14,7 @@ pub struct UpdateInputRequest {
     operation_id = "update_input",
     params(("input_id" = str, Path, description = "Input ID.")),
     responses(
-        (status = 200, description = "Input updated successfully.", body = Response),
+        (status = 200, description = "Input updated successfully.", body = OkResponse),
         (status = 400, description = "Bad request.", body = ApiError),
         (status = 404, description = "Input not found.", body = ApiError),
         (status = 500, description = "Internal server error.", body = ApiError),
@@ -40,16 +25,12 @@ pub async fn handle_input_update(
     State(api): State<Arc<ApiState>>,
     Path(input_id): Path<InputId>,
     Json(request): Json<UpdateInputRequest>,
-) -> Result<Response, ApiError> {
-    let seek = request
-        .seek_ms
-        .map(|ms| Duration::try_from_secs_f64(ms / 1000.0))
-        .transpose()
-        .map_err(|err| TypeError::new(format!("Invalid seek duration. {err}")))?;
+) -> Result<Json<OkResponse>, ApiError> {
+    let seek = request.seek()?;
 
     api.pipeline()?
         .lock()
         .unwrap()
         .update_input(&input_id.into(), request.pause, seek)?;
-    Ok(Response::Ok {})
+    Ok(Json(OkResponse {}))
 }
